--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^6.5.8",
+    "@astrojs/sitemap": "^3.5.1",
+    "@zip.js/zip.js": "^2.7.73",
     "astro": "^5.13.3"
   }
 }
